start of school selection typeahead

--- a/configuration/partials/account/details-form-fields.hbs
+++ b/configuration/partials/account/details-form-fields.hbs
@@ -1,4 +1,4 @@
-{{#withExtend this hasPostcode=(if @root.data.accountInfo.local_authority true else=false)}}
+{{#withExtend this hasPostcode=(if @root.data.accountInfo.local_authority true else=false) hasSchool=(if @root.data.accountInfo.school_college_name true else=false)}}
 
 <div class="form-horizontal form">
   {{!--
@@ -54,8 +54,12 @@
         <label class="form-label" for="school_college_name">School/college name</label>
       </div>
       <div class="column col-9 col-sm-12">
-        <input class="form-input" id="school_college_name" name="school_college_name" type="text" value="{{@root.data.accountInfo.school_college_name}}" placeholder="" autocomplete="nope" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
+        <div class="has-icon-right d-inline-block" data-component="Typeahead" data-Typeahead="typeahead-school">
+          <input class="form-input" id="school_college_name" name="school_college_name" type="text" value="{{@root.data.accountInfo.school_college_name}}" placeholder="" autocomplete="nope" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="school-lookup" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
+          <span class="form-icon far {{#if hasSchool}}fa-check text-success{{else}}fa-times text-error{{/if}}" id="school-validation-icon"></span>
+        </div>
       </div>
+      <input type="hidden" name="school_id" id="school_id" value="{{@root.data.accountInfo.school_id}}" />
     </div>
   {{else}}
     <div class="form-group">
@@ -87,10 +91,10 @@
         <span class="form-icon far {{#if hasPostcode}}fa-check text-success{{else}}fa-times text-error{{/if}}" id="postcode-validation-icon"></span>
       </div>
     </div>
+    <input type="hidden" name="local_authority" id="local_authority" value="{{@root.data.accountInfo.local_authority}}" />
+    <input type="hidden" name="tsi_area" id="tsi_area" value="{{@root.data.accountInfo.tsi_area}}" />
+    <input type="hidden" name="tsi_contact_email" id="tsi_contact_email" value="{{@root.data.accountInfo.tsi_contact_email}}" />
   </div>
-  <input type="hidden" name="local_authority" id="local_authority" value="{{@root.data.accountInfo.local_authority}}" />
-  <input type="hidden" name="tsi_area" id="tsi_area" value="{{@root.data.accountInfo.tsi_area}}" />
-  <input type="hidden" name="tsi_contact_email" id="tsi_contact_email" value="{{@root.data.accountInfo.tsi_contact_email}}" />
 </div>
 
 <input type="hidden" name="external_id" value="{{@root.data.auth.uid}}" />
@@ -100,6 +104,11 @@
   {
     blur: { tasks: ["postcode-lookup"] },
     keyup: { tasks: ["postcode-lookup"] },
+  }
+</script>
+<script data-component-config="school-lookup" type="javascript/blocked">
+  {
+    blur: { tasks: ["school-lookup"] }
   }
 </script>
 
@@ -163,10 +172,6 @@
                           {
                             type: "elementManipulator",
                             config: {
-                              "#postcode-validation-icon": {
-                                addClass: [ "fa-times", "text-error" ],
-                                removeClass: [ "loading", "fa-check", "text-primary", "text-success" ]
-                              },
                               "#local_authority": {
                                 value: ""
                               },
@@ -175,6 +180,10 @@
                               },
                               "#tsi_contact_email": {
                                 value: ""
+                              },
+                              "#postcode-validation-icon": {
+                                addClass: [ "fa-times", "text-error" ],
+                                removeClass: [ "loading", "fa-check", "text-primary", "text-success" ]
                               }
                             }
                           }
@@ -185,10 +194,6 @@
                           {
                             type: "elementManipulator",
                             config: {
-                              "#postcode-validation-icon": {
-                                addClass: [ "fa-check", "text-success" ],
-                                removeClass: [ "loading", "fa-times", "text-primary", "text-error" ]
-                              },
                               ">": {
                                 value: { __template: "{{data.postcodeLookup.[0].place}}" }
                               },
@@ -200,6 +205,10 @@
                               },
                               "#tsi_contact_email": {
                                 value: { __template: "{{data.postcodeLookup.[0].tsi_contact_email}}" }
+                              },
+                              "#postcode-validation-icon": {
+                                addClass: [ "fa-check", "text-success" ],
+                                removeClass: [ "loading", "fa-times", "text-primary", "text-error" ]
                               }
                             }
                           }
@@ -216,6 +225,60 @@
       "validate-details-form"
     ]
   }
+}
+</script>
+<script data-component-config="typeahead-school" type="javascript/blocked">
+{
+  typeaheadOptions: {
+    highlight: true,
+    minlength: 3
+  },
+  datasets: [
+    {
+      name: "school_lookup",
+      display: "title",
+      bloodhound: {
+        datumTokenizer: "objWhitespace",
+        datumTokenizerField: "other",
+        queryTokenizer: "whitespace",
+        remote: {
+          url: "/school-lookup?q=*",
+          wildcard: "*"
+        }
+      }
+    },
+  ],
+  itemSelectedTasks: [
+    {
+      type: "elementManipulator",
+      config: {
+        ">.tt-input": { value: { __pointer: "metadata.suggestion.title" } },
+        "#school_id": { value: { __pointer: "metadata.suggestion.school_id" } },
+        "#school-validation-icon": {
+          addClass: [ "fa-check", "text-success" ],
+          removeClass: [ "loading", "fa-times", "text-primary", "text-error" ]
+        }
+      }
+    }
+  ],
+  clearIfNothingSelected: true,
+  nothingSelectedTasks: [
+    {
+      type: "elementManipulator",
+      config: {
+        ">.tt-menu": { styles: { display: "none !important" } },
+        "#school_id": { value: "" },
+        "#school-validation-icon": {
+          addClass: [ "fa-times", "text-error" ],
+          removeClass: [ "loading", "fa-check", "text-primary", "text-success" ]
+        }
+      }
+    }
+    // {
+    //   type: "run",
+    //   config: { code: "metadata.instance.clearSelection()" }
+    // }
+  ]
 }
 </script>
 {{{{/raw}}}}
