--- a/configuration/templates/account/auth/sign-up-details.hbs
+++ b/configuration/templates/account/auth/sign-up-details.hbs
@@ -13,7 +13,7 @@
     change: { tasks: [ "validate-details-form" ] },
     keyup: { tasks: [ "validate-details-form" ] },
     load: { tasks: [ "validate-details-form" ] },
-    submit: { tasks: [ "just-spin" ]}
+    submit: { tasks: [ "submit-and-spin" ]}
   }'>
     {{> account_details_form_fields admin=data.adminCandidate}}
 
