--- a/configuration/templates/account/auth/user-body-submit.hbs
+++ b/configuration/templates/account/auth/user-body-submit.hbs
@@ -16,6 +16,7 @@
         {{{json key='external_id' value=external_id}}},
         {{{json key='date_of_birth' value=date_of_birth}}},
         {{{json key='school_college_name' value=school_college_name}}},
+        {{{json key='school_college_id' value=school_college_id}}},
         {{{json key='phone' value=phone}}},
         {{{json key='title' value=title}}},
         {{{json key='email' value=email}}},
