--- a/configuration/templates/utilities/search-school-lookup.hbs
+++ b/configuration/templates/utilities/search-school-lookup.hbs
@@ -1,7 +1,7 @@
 [
   {{#eachJoin @root.data.search_data.hits.hits "," ~}}
   {
-    "school_id": {{{stringify _source.Id}}},
+    "school_college_id": {{{stringify _source.Id}}},
     "title": {{{stringify _source.title}}}
   }
   {{/eachJoin ~}}
