--- a/configuration/templates/volunteering/query-hours.hbs
+++ b/configuration/templates/volunteering/query-hours.hbs
@@ -1,4 +1,4 @@
-<div class="tasks-empty empty hide">
+<div class="tasks-empty empty {{#if @root.data.tasksInfoUnverified.[0]}}hide{{/if}}">
   <div class="empty-icon text-success">
     <span class="fal fa-user-check fa-3x"></span>
   </div>
@@ -8,7 +8,7 @@
   </p>
 </div>
 
-<div class="tasks-not-empty empty">
+<div class="tasks-not-empty empty {{#unless @root.data.tasksInfoUnverified.[0]}}hide{{/unless}}">
   <div class="empty-icon">
     <span class="fal fa-user-clock fa-3x"></span>
   </div>
@@ -48,7 +48,7 @@
         {{#each this.hours_list ~}}
           {{#unless verified ~}}
 
-            <form id="{{hours_id}}" method="POST" action="/test-fine?c={{@root.request.params.query.c}}&user_id={{@root.request.params.query.user_id}}" class="inline-hours-form" data-component="TasksTrigger" data-success-hide="true" data-next-task="empty-collapse" data-TasksTrigger="ajax-form-handler">
+            <form id="{{hours_id}}" method="POST" action="/admin-update-individual-hours?c={{@root.request.params.query.c}}&user_id={{@root.request.params.query.user_id}}" class="inline-hours-form" data-component="TasksTrigger" data-success-hide="true" data-next-task="empty-collapse" data-TasksTrigger="ajax-form-handler">
               <input type="hidden" name="task_id" value="{{task_id}}">
               <input type="hidden" name="verified" value="true">
               <input type="hidden" name="claim_code" value="{{claim_code}}">
