added new scvo logo

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -434,7 +434,7 @@
                 <img src="{{~>asset_url url='images/logos/SG_Quaternary_govscot_RGB.png'~}}" alt="Scottish Government" />
               </a>
               <a href="https://scvo.org" class="brand-logo scvo-logo" title="Scottish Council for Voluntary Organisations">
-                <img src="{{~>asset_url url='images/logos/scvo.png'~}}" alt="Scottish Council for Voluntary Organisations" />
+                <img src="{{~>asset_url url='images/logos/scvo-secondary.svg'~}}" alt="Scottish Council for Voluntary Organisations" />
               </a>
             </div>
           </div>
