--- a/src/main.scss
+++ b/src/main.scss
@@ -1059,8 +1059,7 @@ footer {
         text-decoration: none;
       }
       .scvo-logo img {
-        max-height: 38px;
-        filter: invert(1);
+        height: 38px;
       }
       .sg-logo img {
         max-height: 32px;
