--- a/configuration/templates/volunteering/awards.hbs
+++ b/configuration/templates/volunteering/awards.hbs
@@ -1,5 +1,5 @@
 {{#unless @root.data.isAdmin ~}}
-<div class="container achievements">
+<div class="container awards">
   {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
   <ul class="step">
     {{#each @root.context.metaData.certificates ~}}
@@ -19,7 +19,7 @@
   <div class="columns">
     <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto t-margin-full">
       <h2 class="text-center">
-        {{#if in_progress}}Current{{else}}My{{/if}} achievement
+        {{#if in_progress}}Current{{else}}My{{/if}} Award
       </h2>
       <p class="text-center text-dark h5">
         {{type_name}}: {{certificate_name}} hours
@@ -39,7 +39,7 @@
   <div class="columns">
     <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto t-margin-full">
       {{!-- It's being verified --}}
-      <h2 class="text-center">Next achievement</h2>
+      <h2 class="text-center">Next Award</h2>
       <p class="text-center text-dark h5">
         {{type_name}}: {{certificate_name}} hours
       </p>
@@ -63,7 +63,7 @@
   <div class="columns working-towards">
     <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto t-margin-full">
       {{!-- It's ready to claim--}}
-      <h2 class="text-center">Next achievement</h2>
+      <h2 class="text-center">Next Award</h2>
       <p class="text-center text-dark h5">
         {{type_name}}: {{certificate_name}} hours
       </p>
