updated page links

--- a/src/main.scss
+++ b/src/main.scss
@@ -22,7 +22,7 @@ $theme-ascent: #F05B23;
 $theme-summit: #514680;
 
 $theme-footer: #591669;
-$theme-footer-light: #e7eaec;
+$theme-footer-light: #FEF9F9;
 $theme-footer-dark: #333E48;
 
 $unit: 1rem;
