refactoring and consistency

--- a/configuration/templates/account/auth/reset-password.hbs
+++ b/configuration/templates/account/auth/reset-password.hbs
@@ -1,7 +1,4 @@
 <form id="reset-password-form" method="POST" class="container form authentication-form" data-component="TasksTrigger" data-TasksTrigger="reset-password">
-  <!-- <h2 class="x-padding">
-    Reset password
-  </h2> -->
   <p class="l-margin r-margin">
     Enter your email address to be sent a password reset link
   </p>
@@ -14,7 +11,7 @@
     <div id="form-section-email">
       <div class="form-group has-icon-left">
         <input class="form-input" type="email" id="reset-password-email" placeholder="Your email address" required />
-        <span class="form-icon far fa-at"></span>
+        <span class="form-icon far fa-envelope"></span>
       </div>
     </div>
     <div id="form-section-sign-in-buttons" class="t-margin">
