--- a/configuration/templates/account/auth/sign-up-admin.hbs
+++ b/configuration/templates/account/auth/sign-up-admin.hbs
@@ -11,11 +11,11 @@
     <div id="form-section-email">
       <div class="form-group has-icon-left">
         <input class="form-input" type="email" id="sign-up-email" placeholder="Email" required />
-        <span class="form-icon far fa-at"></span>
+        <span class="form-icon far fa-envelope"></span>
       </div>
       <div class="form-group has-icon-left">
         <input class="form-input" type="email" id="sign-up-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="nope" required />
-        <span class="form-icon far fa-at"></span>
+        <span class="form-icon far fa-envelope"></span>
       </div>
       <div class="form-group has-icon-left">
         <input class="form-input" type="password" id="sign-up-password" placeholder="Password" data-lpignore="true" autocomplete="nope" required />
@@ -28,13 +28,13 @@
     </div>
     <div id="form-section-sign-up-buttons" class="t-margin">
       <button class="btn btn-primary" type="submit" id="sign-up-submit">
-        Sign up
+        Request approval
       </button>
       <p class="v-margin-full">
         Read our <a href="/privacy" target="_blank">privacy notice</a>
       </p>
       <p class="v-margin-full">
-        Already have an account? <a href="/sign-in">Sign in</a>
+        Already have a group administrator account? <a href="/sign-in-admin">Sign in</a>
       </p>
     </div>
   </div>
