--- a/configuration/templates/pages/contact.hbs
+++ b/configuration/templates/pages/contact.hbs
@@ -40,7 +40,7 @@
         </div> -->
         <div class="card-footer">
           {{#if email ~}}
-          <a href="mailto:{{email}}" class="btn btn-primary"><span class="far fa-fw fa-at"></span></a>
+          <a href="mailto:{{email}}" class="btn btn-primary"><span class="far fa-fw fa-envelope"></span></a>
           {{/if ~}}
           {{#if phone ~}}
           <a href="tel:+44{{phone}}" class="btn"><span class="fas fa-fw fa-phone fa-flip-horizontal"></span></a>
