--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -83,18 +83,15 @@
           </div>
 
           <div class="form-group has-icon-left">
-            <input class="form-input" type="email" id="change-email-value" placeholder="New email" data-lpignore="true" autocomplete="nope"
-                   data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
-            <span class="form-icon far fa-at"></span>
+            <input class="form-input" type="email" id="change-email-value" placeholder="New email" data-lpignore="true" autocomplete="nope" data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
+            <span class="form-icon far fa-envelope"></span>
           </div>
           <div class="form-group has-icon-left">
-            <input class="form-input" type="email" id="change-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="nope"
-                   data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
-            <span class="form-icon far fa-at"></span>
+            <input class="form-input" type="email" id="change-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="nope" data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
+            <span class="form-icon far fa-envelope"></span>
           </div>
 
-          <button type="button" class="btn btn-primary" data-component="TasksTrigger" data-TasksTrigger="show-confirm-modal"
-                  data-confirm-task="change-email"  disabled data-confirm-verb="change your email" data-confirm-description="#check-email-show-confirm">
+          <button type="button" class="btn btn-primary" data-component="TasksTrigger" data-TasksTrigger="show-confirm-modal" data-confirm-task="change-email" disabled data-confirm-verb="change your email" data-confirm-description="#check-email-show-confirm">
             Change email
           </button>
         </form>
