--- a/configuration/templates/account/auth/sign-up.hbs
+++ b/configuration/templates/account/auth/sign-up.hbs
@@ -6,37 +6,41 @@
   </div>
   <div class="x-padding">
     <div id="form-section-email" class="form">
-      {{> account_sign_in_social messageSelector="#sign-up-message"}}
+      <div class="b-padding">
+        {{> account_sign_in_social messageSelector="#sign-up-message"}}
+      </div>
 
       <div class="divider text-center v-margin-full" data-content="or"></div>
 
-      <div class="form-group has-icon-left">
-        <input class="form-input" type="email" id="sign-up-email" placeholder="Email" required />
-        <span class="form-icon far fa-at" id="sign-up-email-icon"></span>
+      <div class="t-padding-full">
+        <div class="form-group has-icon-left">
+          <input class="form-input" type="email" id="sign-up-email" placeholder="Email" required />
+          <span class="form-icon far fa-envelope" id="sign-up-email-icon"></span>
+        </div>
+        <div class="form-group has-icon-left">
+          <input class="form-input" type="email" id="sign-up-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="nope" required />
+          <span class="form-icon far fa-envelope" id="sign-up-email-confirm-icon"></span>
+        </div>
+        <div class="form-group has-icon-left">
+          <input class="form-input" type="password" id="sign-up-password" placeholder="Password" data-lpignore="true" autocomplete="nope" required />
+          <span class="form-icon far fa-key" id="sign-up-password-icon"></span>
+        </div>
+        <div class="form-group has-icon-left">
+          <input class="form-input" type="password" id="sign-up-password-confirm" placeholder="Confirm password" data-lpignore="true" autocomplete="nope" required />
+          <span class="form-icon far fa-key" id="sign-up-password-confirm-icon"></span>
+        </div>
       </div>
-      <div class="form-group has-icon-left">
-        <input class="form-input" type="email" id="sign-up-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="nope" required />
-        <span class="form-icon far fa-at" id="sign-up-email-confirm-icon"></span>
+      <div id="form-section-sign-up-buttons" class="t-margin">
+        <button class="btn btn-primary" type="submit" id="sign-up-submit" >
+          Sign up
+        </button>
+        <p class="v-margin-full">
+          Read our <a href="/privacy" target="_blank">privacy notice</a>
+        </p>
+        <p class="v-margin-full">
+          Already have an account? <a href="/sign-in">Sign in</a>
+        </p>
       </div>
-      <div class="form-group has-icon-left">
-        <input class="form-input" type="password" id="sign-up-password" placeholder="Password" data-lpignore="true" autocomplete="nope" required />
-        <span class="form-icon far fa-key" id="sign-up-password-icon"></span>
-      </div>
-      <div class="form-group has-icon-left">
-        <input class="form-input" type="password" id="sign-up-password-confirm" placeholder="Confirm password" data-lpignore="true" autocomplete="nope" required />
-        <span class="form-icon far fa-key" id="sign-up-password-confirm-icon"></span>
-      </div>
-    </div>
-    <div id="form-section-sign-up-buttons" class="t-margin">
-      <button class="btn btn-primary" type="submit" id="sign-up-submit" >
-        Sign up
-      </button>
-      <p class="v-margin-full">
-        Read our <a href="/privacy" target="_blank">privacy notice</a>
-      </p>
-      <p class="v-margin-full">
-        Already have an account? <a href="/sign-in">Sign in</a>
-      </p>
     </div>
   </div>
   <input type="hidden" name="redirect" id="redirect" value="home" />
